PEPPER-1182 Cancer Translations (#2708)
PEPPER-1182 added support for multiple languages for the cancer list.